--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,11 @@
 }
 
 
+
         /* Навигационное меню */
+
+
+
 
 header {
     width: 1202px;
@@ -19,8 +23,10 @@ header {
 }
 
 
-            /* Что бы спозиционировать list-item я для их блока-обертки
-            отдельно задаю ширину и свойство display:flex; */
+
+        /* Что бы спозиционировать list-item я для их блока-обертки
+         отдельно задаю ширину и свойство display:flex; */
+
 
 
 .navigation-menu {
@@ -55,26 +61,39 @@ header {
 
 
 
-            /* Тут начинается верстка main */
+        /* Тут начинается верстка main */
+
+
+
 
 main {
     width: 1202px;
     margin: 0 auto;
 }
 
-.headline1 {
+
+
+         /* Позиционирование headlines */
+
+
+
+
+.headlines {
+    width: 344px;
+    margin: 0 auto;
     text-align: center;
+}
+
+.headline1 {
     font-family: 'Kaushan Script', cursive;
     font-size: 24px;
     font-weight: 400;
 }
 
 .headline2 {
-    text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     font-weight: 700;
-    margin-bottom: 112px;
 }
 
 .headline2::after {
@@ -87,24 +106,39 @@ main {
     margin-top: 42px;
 }
 
+.services {
+    margin-bottom: 66px;
+}
 
-            /* Ниже начинается верстка и позиционирование 
-            блоков amazing services */
+.team {
+    margin-bottom: 44px;
+}
+
+
+
+        /* Ниже начинается верстка и позиционирование wrapper */
+
+
 
 
 .wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    position: relative;
 }
 
 .container {
-    width: 265px;
+    max-width: 380px;
     margin-bottom: 100px;
 }
 
+.four, .five, .six {
+    margin-bottom: 90px;
+}
+
 .container:not(:nth-child(3n)) {
-    margin-right: 144px;
+    margin-right: 20px;
 }
 
 .headline3 {
@@ -127,7 +161,54 @@ main {
       /* А теперь я перехожу к псевдоэлементам для .container */
 
 
+
+
 .container::before {
-    content: url(/img/Безимени-1.png);
-    margin-right: 22px ;
+    content: '';
+    position: absolute;
+    display: inline-block;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.inner {
+    width: 80%;
+    float: right;
+}
+
+.one::before {
+    content: url(/img/before1.png);
+}
+
+.two::before {
+    content: url(/img/before2.png);
+}
+
+.three::before {
+    content: url(/img/before3.png);
+}
+
+.four::before {
+    content: url(/img/before4.png);
+}
+
+.five::before {
+    content: url(/img/before5.png);
+}
+
+.six::before {
+    content: url(/img/before6.png);
+}
+
+
+
+        /* Позиционирование текста под headlines */
+
+
+.text2 {
+    display: inline-block;
+    text-align: center;
+    color: #999999;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
