--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,6 +52,7 @@ header {
     font-size: 14px;
     font-weight: 400;
     padding: 12px 0;
+    transition: all 200ms linear;
 }
 
 .list-item a:hover {
@@ -216,84 +217,148 @@ main {
 
 
 
-        /* Позиционирование и стилизация section "team" */
+        /* Позиционирование и стилизация section "teamphoto" */
 
 
-         .teamphoto {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 84px;
-        }
-        
-        .image {
-            width: 380px;
-            background: url(/img/teamphoto/graphic-design.jpg);
-            margin-bottom: 30px;
-            transition: all 200ms linear;
-        }
+.teamphoto {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 84px;
+}
 
-        .imageUX {
-            background: url(/img/teamphoto/UX-design.jpg);
-        }
+.Memberteam {
+    max-width: 380px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+        
+.Memberteam:hover .image {
+    transform: translate(-10px, -10px);
+    box-shadow: 10px 10px 0px 0px #95e1d3;
+}
 
-        .imageWEB {
-            background: url(/img/teamphoto/web-developer.jpg);
-        }
+.Memberteam:hover .innertwo {
+    opacity: 1;
+}
+        
+.image {
+    width: 380px;
+    margin-bottom: 30px;
+    transition: all 200ms linear;
+}
 
-        .Memberteam {
-            max-width: 380px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        
-        .Memberteam:hover .image {
-            transform: translate(-10px, -10px);
-            box-shadow: 10px 10px 0px 0px #95e1d3;
-        }
-        
-        .innertwo {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 380px;
-            height: 468px;
-            background: linear-gradient(to bottom, rgba(238, 137, 138, 0.8), rgba(240, 217, 137, 0.8));
-            opacity: 0;
-        }
-        
-        .Memberteam:hover .innertwo {
-            opacity: 1;
-        }
-        
-        .spisok {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            list-style: none;
-            max-height: 468px;
-        }
-        
-        .list-item2 {
-            background-color: #fce38a;
-            border: 1px solid #f9bd87;
-            transition: all 200ms linear;
-        }
-        
-        .list-item2:hover {
-            background-color: #95e1d3;
-        }
-        
-        .name {
-            font-size: 14px;
-            margin-bottom: 16px;
-            font-weight: 400;
-            font-family: 'Montserrat', sans-serif;
-        }
+.imageDesg {
+    background: url(/img/teamphoto/graphic-design.jpg);
+}
 
-        .description {
-            font-size: 15px;
-            color: #b3b3b3;
-            font-family: 'Roboto', sans-serif;
-            font-weight: 300i;
-        }
+.imageUX {
+    background: url(/img/teamphoto/UX-design.jpg);
+}
+
+.imageWEB {
+    background: url(/img/teamphoto/web-developer.jpg);
+}
+        
+.innertwo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 380px;
+    height: 468px;
+    background: linear-gradient(to bottom, rgba(238, 137, 138, 0.8), rgba(240, 217, 137, 0.8));
+    opacity: 0;
+}
+        
+.spisok {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    max-height: 468px;
+}
+        
+.list-item2 {
+    background-color: #fce38a;
+    border: 1px solid #f9bd87;
+    transition: all 200ms linear;
+}
+        
+.list-item2:hover {
+    background-color: #95e1d3;
+}
+        
+.name {
+    font-size: 14px;
+    margin-bottom: 16px;
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.description {
+    font-size: 15px;
+    color: #b3b3b3;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300i;
+}
+
+
+
+        /* Позиционирование и стилизация футера */
+
+
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1202px;
+    margin: auto;
+    border-top: 1px solid #e5e5e5;
+    padding: 24px 0;
+}
+
+.text3 {
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    color: #333333;
+}
+
+span {
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    color: #f38181;
+}
+
+button {
+    float: right;
+    border: none;
+    width: 150px;
+    height: 40px;
+    background-color: #95e1d3;
+    color: #ffffff;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+
+input {
+    float: left;
+    width: 228;
+    height: 38px;
+    border: 1px solid #e7e7e7;
+    padding: 0 10px;
+    color: #8f8e8e;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300i;
+}
+
+::-webkit-input-placeholder {
+    color:#e7e7e7;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300i;
+}
