--- a/CSS/style.css
+++ b/CSS/style.css
@@ -257,7 +257,7 @@ main {
 }
 
 .imageWEB {
-    background: url(/img/teamphoto/web-developer.jpg);
+    background: url(../img/teamphoto/web-developer.jpg);
 }
         
 .innertwo {
